fix: wrapping updated

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -129,7 +129,7 @@ $section-headings-color: #c47179;
   }
 }
 
-#match-3-base {
+#match-3-base-wrapper {
   @include medium {
     display: none;
   }
